--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -16,6 +16,10 @@ jobs:
         java-version: [ '11', '17', '21' ]
         hive-version: [ '3.1.3', '4.0.0', '4.1.0' ]
         hadoop-version: [ '3.3.6', '3.4.2' ]
+        exclude:
+          - hive-version: '4.1.0' # Hive 4.1.0 requires at least Java 17
+            java-version: '11'
+
       fail-fast: false
     permissions:
       contents: write
